--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
       <div class="site-slider">
         <div class="slider-one">
           <div>
-            <img src="./assets/item-1.jpg" class="img-fluid " alt="item 1">
+            <img src="./assets/ban-01.jpg" class="img-fluid " alt="item 1">
           </div>
           <div>
-            <img src="./assets/item-2.jpg" class="img-fluid " alt="item 2">
+            <img src="./assets/ban-02.jpg" class="img-fluid " alt="item 2">
           </div>
           
           <div>
-            <img src="./assets/item-3.jpg" class="img-fluid" alt="item 3">
+            <img src="./assets/ban-03.png" class="img-fluid" alt="item 3">
           </div>
         </div>
 
@@ -191,8 +191,8 @@
                 </div>
                 <div class="pro-price py-2">
                   <h5>
-                    <small><s class="text-secondary">€125.99</s></small>
-                    <span>€120.00000</span>
+                    <small><s class="text-secondary">€12.99</s></small>
+                    <span>€120.00</span>
                   </h5>
 
                 </div>
@@ -203,7 +203,7 @@
           </div>
           <!--item 2-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-8.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Ikea Rusch 25x4 Wall</h6>
                 <div class="rating">
@@ -227,7 +227,7 @@
           </div>
           <!--item 3-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-9.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Himalayan Salt Lamp Touch</h6>
                 <div class="rating">
@@ -251,7 +251,7 @@
           </div>
           <!--imem 4-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-10.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Table Lamp Beside Desk</h6>
                 <div class="rating">
@@ -274,7 +274,7 @@
           </div>
           <!--item-5-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-11.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Parsons Modern End</h6>
                 <div class="rating">
@@ -298,7 +298,7 @@
           </div>
           <!--item 6-->
           <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+              <img src="./assets/image-12.jpg"class="img-fluid" alt="#">
               <div class="cart-details">
                 <h6 class="pro-title p-0">Outdoor Patio Teak Slide Table</h6>
                 <div class="rating">
@@ -369,13 +369,13 @@
             <!--changed p-0 to p-2-->
             <div class="col-md-8 p-2 bg-white">
               <div class="text-left">
-                  <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                  <img src="./assets/image-13.jpg"class="img-fluid" alt="#">
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-12 pt-5">
-          <h4 class="text-left">Upholstered Frabic Sofa</h4>
+          <h4 class="text-left">Boat For Sale</h4>
           <p class="text-secondary pr-5 pt-3">
             <small>
                 Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -389,8 +389,8 @@
             <i class="fas-fa-star"></i>
           </div>
           <h4 class="pt-2">
-            <small><s class="text-seconday">€519.99</s></small>
-            <span class="text-color">€499.99
+            <small><s class="text-seconday">€1519.99</s></small>
+            <span class="text-color">€1499.99
 
             </span>
           </h4>
@@ -418,27 +418,27 @@
           <div class="slider-four row text-center">
             <!--image 1-->
             <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-1.jpg"class="border img-fluid" alt="#">
+              <img src="./assets/ass-1.jpg"class="border img-fluid" alt="#">
             </div>
             <!--image 2-->
             <div class="col-md-2 product pt-md-5">
-              <img src="./assets/item-2.jpg"class="border img-fluid" alt="#">
+              <img src="./assets/ass-2.jpg"class="border img-fluid" alt="#">
             </div>
             <!--image 3-->
             <div class="col-md-2 product pt-md-5">
-                <img src="./assets/item-3.jpg"class="border img-fluid" alt="#">
+                <img src="./assets/ass-3.jpg"class="border img-fluid" alt="#">
               </div>
             <!--image 4-->
             <div class="col-md-2 product pt-md-5">
-                <img src="./assets/item-1.jpg"class="border img-fluid" alt="#">
+                <img src="./assets/ass-4.jpg"class="border img-fluid" alt="#">
               </div>
             <!--image 5-->
             <div class="col-md-2 product pt-md-5">
-                <img src="./assets/item-2.jpg"class="border img-fluid" alt="#">
+                <img src="./assets/ass-5.jpg"class="border img-fluid" alt="#">
               </div>
             <!--image 6-->
             <div class="col-md-2 product pt-md-5">
-                <img src="./assets/item-3.jpg"class="border img-fluid" alt="#">
+                <img src="./assets/ass-6.jpg"class="border img-fluid" alt="#">
               </div>
           </div>
           <!--arrows for section-->
@@ -455,18 +455,18 @@
       <div class="container my-5">
         <div class="row">
           <div class="col-md-8 col-12">
-              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <img src="./assets/advert-1.jpg"class="img-fluid" alt="#">
           </div>
           <div class="col-md-4 col-12">
-              <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+              <img src="./assets/advert-4.jpg"class="img-fluid" alt="#">
           </div>
         </div>
         <div class="row my-md-3">
           <div class="col-md-4 col-12">
-              <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+              <img src="./assets/advert-3.jpg"class="img-fluid" alt="#">
           </div>
           <div class="col-md-8 col-12">
-              <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+              <img src="./assets/advert-2.jpg"class="img-fluid" alt="#">
           </div>
         </div>
 
@@ -706,25 +706,25 @@
         <div class="slider-brand">
           <div class="slider-five px-5">
             <div>
-                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-1.jpg"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-3.png"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-2.jpg"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-4.png"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-2.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-6.png"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-3.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-7.png"class="img-fluid" alt="#">
             </div>
             <div>
-                <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+                <img src="./assets/logo-5.png"class="img-fluid" alt="#">
             </div>
           </div>
             <div class="slider-btn">
@@ -886,7 +886,7 @@
         <!--sec 4-->
         <div class="col-md-4 follow-us col-sm-12">
           <h4>Follow Instagram</h4>
-          <img src="./assets/item-1.jpg"class="img-fluid" alt="#">
+          <img src="./assets/logo-8.jpg"class="img-fluid" alt="#">
         </div>
         <!--/sec 4-->
       </div>
